Update Console and Yarn Packages

--- a/Source/Server/apps/mpconsole/templates/adm_agent_deploy.html
+++ b/Source/Server/apps/mpconsole/templates/adm_agent_deploy.html
@@ -84,7 +84,7 @@
 	<script src="{{ url_for('static', filename='yarn_components/colresizable/colResizable-1.6.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='static_components/bootstrap-table-editable/bootstrap-table-editable.js') }}"></script>
 	<script src="{{ url_for('static', filename='yarn_components/bootstrap-editable/js/index.js') }}"></script>
-	<script src="{{ url_for('static', filename='yarn_components/moment/min/moment.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='yarn_components/moment/moment.js') }}"></script>
 	<script>
 	function download(path) {
 		var iframe = document.getElementById('dl-agentuploader');
