--- a/Source/Server/apps/mpconsole/templates/os_managment/os_app_restriction.html
+++ b/Source/Server/apps/mpconsole/templates/os_managment/os_app_restriction.html
@@ -133,7 +133,7 @@
 
 	<!-- jQuery -->
 	<script src="{{ url_for('static', filename='yarn_components/jquery/dist/jquery.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='yarn_components/moment/min/moment.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='yarn_components/moment/moment.js') }}"></script>
 
 	<!-- Bootstrap Core JavaScript -->
 	<script src="{{ url_for('static', filename='yarn_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
