--- a/Source/Server/apps/mpconsole/templates/registration.html
+++ b/Source/Server/apps/mpconsole/templates/registration.html
@@ -115,7 +115,7 @@ Agent Registration
 
 {% block jsPre %}
 	{{ super() }}
-	<script src="{{ url_for('static', filename='yarn_components/moment/min/moment.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='yarn_components/moment/moment.js') }}"></script>
 
 {% endblock %}
 
