--- a/Source/Server/apps/mpconsole/templates/reports/new_report.html
+++ b/Source/Server/apps/mpconsole/templates/reports/new_report.html
@@ -126,8 +126,8 @@
 {% block javascript %}
 	{{ super() }}
 
-	<script src="{{ url_for('static', filename='yarn_components/moment/min/moment.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='yarn_components/jquery-extendext/jQuery.extendext.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='yarn_components/moment/moment.js') }}"></script>
+	<script src="{{ url_for('static', filename='yarn_components/jquery-extendext/jquery-extendext.js') }}"></script>
 	<script src="{{ url_for('static', filename='yarn_components/jQuery-QueryBuilder/dist/js/query-builder.standalone.js') }}"></script>
 	<script src="{{ url_for('static', filename='yarn_components/sql-parser-mistic/browser/sql-parser.js') }}"></script>
 	<script src="{{ url_for('static', filename='yarn_components/interactjs/dist/interact.min.js') }}"></script>
@@ -135,8 +135,6 @@
 
 
 	<script src="{{ url_for('static', filename='yarn_components/bootstrap-table/dist/bootstrap-table.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='yarn_components/bootstrap-table/dist/extensions/resizable/bootstrap-table-resizable.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='yarn_components/colresizable/colResizable-1.6.min.js') }}"></script>
 	<link href="{{ url_for('static', filename='css/mp.css') }}" rel="stylesheet">
 	<script>
 	function hideAll() {
