--- a/Source/Server/apps/mpconsole/templates/agent_plugins.html
+++ b/Source/Server/apps/mpconsole/templates/agent_plugins.html
@@ -126,7 +126,8 @@
 	$(function () {
 		$_delPluginButton.click(function ()
 		{
-			var rows = $('#table').bootstrapTable('getAllSelections');
+			//var rows = $('#table').bootstrapTable('getAllSelections');
+			var rows = $('#table').bootstrapTable('getSelections');
 			var rowsArr = [];
 			for (x in rows) {
 				var _rid = rows[x]['rid'];
