--- a/Source/Server/apps/console/mpconsole/templates/provision/script_modify.html
+++ b/Source/Server/apps/console/mpconsole/templates/provision/script_modify.html
@@ -124,6 +124,7 @@
 								<select class="form-control" name="type">
 									<option value="1" {% if 1 == data['Script']['type'] %}selected{% endif %}>Post Software Task Installs</option>
 									<option value="0" {% if 0 == data['Script']['type'] %}selected{% endif %}>Pre Software Task Installs</option>
+									<option value="2" {% if 2 == data['Script']['type'] %}selected{% endif %}>Finish Script</option>
 								</select>
 							</div>
 						</div>
