--- a/Source/Server/apps/console/mpconsole/templates/agent_plugins.html
+++ b/Source/Server/apps/console/mpconsole/templates/agent_plugins.html
@@ -126,7 +126,7 @@
 	$(function () {
 		$_delPluginButton.click(function ()
 		{
-			//var rows = $('#table').bootstrapTable('getAllSelections');
+			//var rows = $('#table').bootstrapTable('getSelections');
 			var rows = $('#table').bootstrapTable('getSelections');
 			var rowsArr = [];
 			for (x in rows) {
