--- a/Source/Server/apps/console/mpconsole/templates/asus_servers.html
+++ b/Source/Server/apps/console/mpconsole/templates/asus_servers.html
@@ -122,7 +122,7 @@ MacPatch Servers
 	$(function () {
 		$_delPluginButton.click(function ()
 		{
-			var rows = $('#table').bootstrapTable('getAllSelections');
+			var rows = $('#table').bootstrapTable('getSelections');
 			var rowsArr = [];
 			for (x in rows) {
 				var _rid = rows[x]['rid'];
