--- a/Source/Server/apps/console/mpconsole/templates/software/software_tasks.html
+++ b/Source/Server/apps/console/mpconsole/templates/software/software_tasks.html
@@ -124,7 +124,7 @@
 	$(function () {
 		$delBut.click(function ()
 		{
-			var rows = $('#table').bootstrapTable('getAllSelections');
+			var rows = $('#table').bootstrapTable('getSelections');
 			var rowsArr = [];
 			for (x in rows) {
 				var _tID = rows[x]['tuuid'];
