--- a/Source/Server/apps/console/mpconsole/templates/provision/software_tasks.html
+++ b/Source/Server/apps/console/mpconsole/templates/provision/software_tasks.html
@@ -154,7 +154,7 @@
 
 		$delBut.click(function ()
 		{
-			var rows = $table.bootstrapTable('getAllSelections');
+			var rows = $table.bootstrapTable('getSelections');
 			var rowsArr = [];
 			for (x in rows) {
 				var _tID = rows[x]['tuuid'];
