--- a/Source/Server/apps/console/mpconsole/templates/provision/script_modify.html
+++ b/Source/Server/apps/console/mpconsole/templates/provision/script_modify.html
@@ -118,7 +118,7 @@
 						</div>
                         <div class="row row-grid top10">
 							<div class="col-md-3">
-								<label>Script Type</label>
+								<label>Script Type -- {{data['Script']['type']}}</label>
 							</div>
 							<div class="col-md-5">
 								<select class="form-control" name="type">
